--- a/_layouts/related-posts.html
+++ b/_layouts/related-posts.html
@@ -1,4 +1,6 @@
 
+{% macro render(post, doc_types, quantity) %}
+
 <div class="related-posts">
     <h1 class="header-slug">
         <span class="header-slug_inner">
@@ -6,7 +8,7 @@
         </span>
     </h1>
     <ul class="list list__unstyled list__spaced">
-    {% for similar in more_like_this(post, search_types="posts,newsroom", search_size=5) %}
+    {% for similar in more_like_this(post, search_types=doc_types, search_size=quantity) %}
         <li class="list_item">
             <a class="list_link"
                href="{{ similar.permalink }}">
@@ -16,3 +18,5 @@
     {% endfor %}
     </ul>
 </div>
+
+{% endmacro %}
