--- a/_layouts/related-links.html
+++ b/_layouts/related-links.html
@@ -1,4 +1,6 @@
 
+{% macro render(related_links) %}
+
 <div class="related-links">
     <h1 class="header-slug">
         <span class="header-slug_inner">
@@ -6,7 +8,7 @@
         </span>
     </h1>
     <ul class="list list__unstyled list__spaced">
-        {% for link in view.related_links %}
+        {% for link in related_links %}
         <li class="list_item">
             <a class="list_link"
                href="{{ link[0] }}">
@@ -16,3 +18,5 @@
         {% endfor %}
     </ul>
 </div>
+
+{% endmacro %}
