--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -39,7 +39,12 @@
                 {{ post.date|date("%b %d, %Y") }}
             </span>
         </div>
-        {{ share(post.title, false) }}
+        {{ share(post.title, false, {
+           'text':     post.twtr_text,
+           'related':  post.twtr_rel,
+           'language': post.twtr_lang,
+           'hashtags':  post.twtr_hash
+        }) }}
     {% if post.thumbnail.images %}
         <img class="post_featured-img"
              src="{{ post.thumbnail.images.full.url }}"
