--- a/_layouts/macros.html
+++ b/_layouts/macros.html
@@ -1,58 +1,86 @@
-{# Build a Twitter share URL #}
-{% macro share_twitter_url() %}
+{# ==========================================================================
+
+   share_twitter_url()
+
+   ==========================================================================
+
+   Description:
+
+   Builds a generic Twitter share URL when given nothing.
+
+   Builds a custom Twitter share URL when given:
+
+   options (optional): An object to use for customizing the content of a tweet.
+                       If left blank a generic tweet will be generated using the
+                       URL of the current page and ` via @CFPB`.
+
+   options.text:       Pre-populated text highlighted in the Tweet.
+                       https://dev.twitter.com/web/tweet-button/parameters
+
+   options.related:    A comma-separated list of accounts related to the content
+                       of the shared URI.
+                       https://dev.twitter.com/web/tweet-button/parameters
+
+   options.language:   Loads text components in the specified language.
+                       https://dev.twitter.com/web/tweet-button/parameters
+
+   options.hashtags:   A comma-separated list of hashtags to be appended to
+                       default Tweet text.
+                       https://dev.twitter.com/web/tweet-button/parameters
+
+   ========================================================================== #}
+
+{% macro share_twitter_url(options) %}
     {% set share_twitter_url = "http://twitter.com/intent/tweet" %}
     {% set share_twitter_url = share_twitter_url + "?url=" + request.url|urlencode %}
     {% set share_twitter_url = share_twitter_url + "&amp;via=CFPB" %}
-    {% if post %}
-        {# If this is a post object, check for custom fields having been set #}
-        {% if post.custom_fields.twtr_text %}
-            {% set share_twitter_url = share_twitter_url + "&amp;text=" + post.custom_fields.twtr_text.0|urlencode + "%20--" %}
+    {% if options %}
+        {# If this is a options object, check for custom fields having been set #}
+        {% if options.text %}
+            {% set share_twitter_url = share_twitter_url + "&amp;text=" + options.text|urlencode + "%20--" %}
         {% endif %}
-        {% if post.custom_fields.twtr_rel %}
-            {% set share_twitter_url = share_twitter_url + "&amp;related=" + post.custom_fields.twtr_rel.0 %}
+        {% if options.related %}
+            {% set share_twitter_url = share_twitter_url + "&amp;related=" + options.related %}
         {% endif %}
-        {% if post.custom_fields.twtr_lang %}
-            {% set share_twitter_url = share_twitter_url + "&amp;lang=" + post.custom_fields.twtr_lang.0 %}
+        {% if options.language %}
+            {% set share_twitter_url = share_twitter_url + "&amp;lang=" + options.language %}
         {% endif %}
-        {% if post.custom_fields.twtr_hash %}
-            {% set share_twitter_url = share_twitter_url + "&amp;hashtags=" + post.custom_fields.twtr_hash.0 %}
+        {% if options.hashtags %}
+            {% set share_twitter_url = share_twitter_url + "&amp;hashtags=" + options.hashtags %}
         {% endif %}
     {% endif %}
     {{ share_twitter_url }}
 {% endmacro %}
 
-{# Format a phone number to `(XXX) XXX-XXXX` when given `XXXXXXXXXX` #}
-{% macro format_phone(number) %}
-    {%- for char in number -%}
-        {{- '(' if loop.index == 1 -}}
-        {{ char }}
-        {{- ') ' if loop.index == 3 -}}
-        {{- '-' if loop.index == 6 -}}
-    {%- endfor %}
-{% endmacro %}
 
-{# Format address to:
-   ```
-   Line 1
-   Line 2 City, State Zip
-   ```
-   when given a contact post type #}
-{% macro format_address(contact) %}
-    {{ contact.street if contact.street }}<br>
-    {{ contact.street_2 + '<br>'|safe if contact.street_2 }}
-    {{ contact.city + ',' if contact.city }}
-    {{ contact.state if contact.state }}
-    {{ contact.zip_code if contact.zip_code }}
-{% endmacro %}
+{# ==========================================================================
 
-{# Format time to: `XX:XX a.m. &ndash; XX:XX p.m.` when given a date object #}
-{% macro format_time(datetime) %}
-    {{- datetime|date('%I:%M&nbsp;%p')|replace('PM', 'p.m.')|replace('AM', 'a.m.')|safe -}}
-{% endmacro %}
+   share()
 
-{# Make share icons when given a title for the share by email link.
-   You can turn on the heading by passing a boolena for the second parameter. #}
-{% macro share(title, show_header=false) %}
+   ==========================================================================
+
+   Description:
+
+   Make share icons when given:
+
+   title:                      The title of the thing to share. Used by the
+                               'share via email'.
+
+   show_header (optional):     Toggles the heading. Defaults to false.
+
+   twitter_options (optional): See `options` under the `share_twitter_url()`
+                               macro.
+
+   ==========================================================================
+
+   Example:
+
+       {{ share('Title for email sharing', true,
+                { 'text': 'I can write my custom tweet text here' }) }}
+
+   ========================================================================== #}
+
+{% macro share(title, show_header=false, twitter_options={}) %}
     <aside>
     {% if show_header %}
         <h1 class="h5">Share this page</h1>
@@ -74,7 +102,7 @@
             </li>
             <li class="list_item">
                 <a class="share-icon"
-                   href="{{ share_twitter_url() }}"
+                   href="{{ share_twitter_url(twitter_options) }}"
                    target="_blank">
                     <span class="cf-icon cf-icon-twitter-square"></span>
                     <span class="u-visually-hidden">Share on Twitter</span>
@@ -87,7 +115,72 @@
 
 {# ==========================================================================
 
+   format_phone()
+
+   ==========================================================================
+
+   Description:
+
+   Formats a phone number to:
+
+       (XXX) XXX-XXXX
+
+   when given:
+
+   number: A ten-digit string, no spaces.
+
+   ========================================================================== #}
+
+{% macro format_phone(number) %}
+    {%- for char in number -%}
+        {{- '(' if loop.index == 1 -}}
+        {{ char }}
+        {{- ') ' if loop.index == 3 -}}
+        {{- '-' if loop.index == 6 -}}
+    {%- endfor %}
+{% endmacro %}
+
+
+{# ==========================================================================
+
+   format_address()
+
+   ==========================================================================
+
+   Description:
+
+   Formats address to:
+
+       Line 1
+       Line 2 City, State Zip
+
+   when given:
+
+   contact: A contact document object.
+
+   ========================================================================== #}
+
+{% macro format_address(contact) %}
+    {{ contact.street if contact.street }}<br>
+    {{ contact.street_2 + '<br>'|safe if contact.street_2 }}
+    {{ contact.city + ',' if contact.city }}
+    {{ contact.state if contact.state }}
+    {{ contact.zip_code if contact.zip_code }}
+{% endmacro %}
+
+{# Format time to: `XX:XX a.m. &ndash; XX:XX p.m.` when given a date object #}
+{% macro format_time(datetime) %}
+    {{- datetime|date('%I:%M&nbsp;%p')|replace('PM', 'p.m.')|replace('AM', 'a.m.')|safe -}}
+{% endmacro %}
+
+
+{# ==========================================================================
+
    string_length()
+
+   ==========================================================================
+
+   Description:
 
    Get the length of a string after removing whitespace.
    Macros can only return strings so you'll need to convert the value to an
