--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -3,6 +3,10 @@
 
    category_icon()
 
+   ==========================================================================
+
+   Description:
+
    Create an HTML icon when given:
 
    category:           A document type category.
@@ -39,6 +43,10 @@
 
    post_summary()
 
+   ==========================================================================
+
+   Description:
+
    Create an post summary when given:
 
    post: A post from a query result.
@@ -69,6 +77,10 @@
 
    activity_snippets()
 
+   ==========================================================================
+
+   Description:
+
    List a bunch of activity snippets when given:
 
    tag:            A tag to use in the query.
@@ -97,6 +109,10 @@
 {# ==========================================================================
 
    activity_snippet()
+
+   ==========================================================================
+
+   Description:
 
    List titles of recent document type posts when given:
 
@@ -166,6 +182,16 @@
 {# ==========================================================================
 
    pagination()
+
+   ==========================================================================
+
+   Requirements:
+
+   - Must be imported `with context`.
+
+   ==========================================================================
+
+   Description:
 
    Create a pagination component when given:
 
@@ -250,6 +276,16 @@
 {# ==========================================================================
 
    filters()
+
+   ==========================================================================
+
+   Requirements:
+
+   - Must be imported `with context`.
+
+   ==========================================================================
+
+   Description:
 
    Create an expandable of filters when given:
 
