Converts govdelivery pages.

--- a/_layouts/layout-full.html
+++ b/_layouts/layout-full.html
@@ -1,6 +1,1 @@
-{% extends "content-base-main-first.html" %}
-
-{# Hide the sidebar since this is a full-width layout. #}
-{% block content_sidebar_modifiers -%}
-    u-visually-hidden
-{%- endblock %}
+{% extends "content-base-main-only.html" %}
