--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -8790,6 +8790,26 @@ figure img {
    ========================================================================== */
 
 /* topdoc
+  name: Code styles
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: .inline-code
+      markup: |
+        <code class="inline-code">code { color: red; }</code>
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+.inline-code {
+  display: inline-block;
+  padding: 0.21428571em 0.35714286em;
+  border-radius: 4px;
+  background: #f1f2f2;
+  color: #101820;
+  font-size: 0.875em;
+}
+
+/* topdoc
   name: Width utilities
   family: cfgov-cf-enhancements
   patterns:
