--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -9171,6 +9171,24 @@ figure img {
 }
 
 /* topdoc
+  name: Centered on mobile utility
+  family: cfgov-cf-enhancements
+  patterns:
+    - name: .u-centered-on-mobile
+      markup: |
+        <div class="u-w95pct" style="background: #DBEDD4; margin-bottom: 1px;">
+            <code>.u-w95pct</code>
+        </div>
+      notes:
+        - "Sometimes content (parts/all of a media block, for example)
+           should be centered on mobile, but not on larger screen sizes.
+           This implementation conflates inline & block element centering, 
+           though they could be made into separate classes."
+  tags:
+    - cfgov-cf-enhancements
+*/
+
+/* topdoc
   name: Tables
   family: cfgov-cf-enhancements
   notes:
