--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4906,6 +4906,7 @@ textarea.success {
 }
 @media only all and (min-width: 37.5em) and (max-width: 47.9375em) {
   .content-l__full .content-l_col.content-l_col-1-3 {
+    display: block;
     width: 100%;
   }
   .content-l__full .content-l_col.content-l_col-1-3.content-l_col__before-divider {
@@ -4936,6 +4937,7 @@ textarea.success {
     margin-top: 1.875em;
   }
   .content-l__full .content-l_col.content-l_col-2-3 {
+    display: block;
     width: 100%;
   }
   .content-l__full .content-l_col.content-l_col-2-3.content-l_col__before-divider {
@@ -4970,6 +4972,7 @@ textarea.success {
     margin-top: 1.875em;
   }
   .content-l__full .content-l_col.content-l_col-3-8 {
+    display: block;
     width: 100%;
   }
   .content-l__full .content-l_col.content-l_col-3-8.content-l_col__before-divider {
@@ -5000,6 +5003,7 @@ textarea.success {
     margin-top: 1.875em;
   }
   .content-l__full .content-l_col.content-l_col-5-8 {
+    display: block;
     width: 100%;
   }
   .content-l__full .content-l_col.content-l_col-5-8.content-l_col__before-divider {
@@ -5036,6 +5040,7 @@ textarea.success {
 }
 @media only all and (min-width: 50.0625em) and (max-width: 56.1875em) {
   .content-l__main .content-l_col.content-l_col-1-2 {
+    display: block;
     width: 100%;
   }
   .content-l__main .content-l_col.content-l_col-1-2.content-l_col__before-divider {
@@ -5068,6 +5073,7 @@ textarea.success {
 }
 @media only all and (min-width: 37.5em) and (max-width: 56.1875em) {
   .content-l__main .content-l_col.content-l_col-1-3 {
+    display: block;
     width: 100%;
   }
   .content-l__main .content-l_col.content-l_col-1-3.content-l_col__before-divider {
@@ -5098,6 +5104,7 @@ textarea.success {
     margin-top: 1.875em;
   }
   .content-l__main .content-l_col.content-l_col-2-3 {
+    display: block;
     width: 100%;
   }
   .content-l__main .content-l_col.content-l_col-2-3.content-l_col__before-divider {
@@ -5132,6 +5139,7 @@ textarea.success {
     margin-top: 1.875em;
   }
   .content-l__main .content-l_col.content-l_col-3-8 {
+    display: block;
     width: 100%;
   }
   .content-l__main .content-l_col.content-l_col-3-8.content-l_col__before-divider {
@@ -5162,6 +5170,7 @@ textarea.success {
     margin-top: 1.875em;
   }
   .content-l__main .content-l_col.content-l_col-5-8 {
+    display: block;
     width: 100%;
   }
   .content-l__main .content-l_col.content-l_col-5-8.content-l_col__before-divider {
@@ -5197,6 +5206,7 @@ textarea.success {
   }
 }
 .content-l__sidebar .content-l_col.content-l_col-1-3 {
+  display: block;
   width: 100%;
 }
 .content-l__sidebar .content-l_col.content-l_col-1-3.content-l_col__before-divider {
@@ -5227,6 +5237,7 @@ textarea.success {
   margin-top: 1.875em;
 }
 .content-l__sidebar .content-l_col.content-l_col-2-3 {
+  display: block;
   width: 100%;
 }
 .content-l__sidebar .content-l_col.content-l_col-2-3.content-l_col__before-divider {
@@ -5261,6 +5272,7 @@ textarea.success {
   margin-top: 1.875em;
 }
 .content-l__sidebar .content-l_col.content-l_col-3-8 {
+  display: block;
   width: 100%;
 }
 .content-l__sidebar .content-l_col.content-l_col-3-8.content-l_col__before-divider {
@@ -5291,6 +5303,7 @@ textarea.success {
   margin-top: 1.875em;
 }
 .content-l__sidebar .content-l_col.content-l_col-5-8 {
+  display: block;
   width: 100%;
 }
 .content-l__sidebar .content-l_col.content-l_col-5-8.content-l_col__before-divider {
@@ -5326,6 +5339,7 @@ textarea.success {
 }
 @media only all and (min-width: 50.0625em) {
   .content-l__sidebar .content-l_col.content-l_col-1-2 {
+    display: block;
     width: 100%;
   }
   .content-l__sidebar .content-l_col.content-l_col-1-2.content-l_col__before-divider {
