Fixes tag links.

--- a/_includes/article.html
+++ b/_includes/article.html
@@ -1,5 +1,5 @@
 
-{% macro render(post) %}
+{% macro render(post, path) %}
 
 {% from "post-macros.html" import category_icon as category_icon %}
 {% from "macros.html" import share as share %}
