Updated docs for cat slug.

--- a/_includes/category-slug.html
+++ b/_includes/category-slug.html
@@ -17,6 +17,8 @@
                        using the literal string '/blog/'. Path is used to create
                        the filtered URL: {{ path }}?filter_category={{ category }}
 
+   classes:            An optional, space separated list of class names.
+
    ========================================================================== #}
 
 {%- macro render(category, path, classes) %}
