Fixes df1462 - adds calendar icon
Fixes df1462 - adds calendar icon styles and HTML test.
- Incorporates Jimmy’s mixin.
- Adds semantic grouping to CSS properties.
- Adds calendar-icon.less to main imports.
- Adds calendar-icon to topdoc_families.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -102,6 +102,7 @@
 @import (less) "activity.less";
 @import (less) "blog-docs.less";
 @import (less) "post.less";
+@import (less) "calendar-icon.less";
 
 
 /* Template pieces
