--- a/static/css/summary.less
+++ b/static/css/summary.less
@@ -23,6 +23,7 @@
             <p class="summary_byline">
                 By Patrice Ficklin
             </p>
+            <span class="summary_event-date">1/21/2015 @ 3:20 PM CST</span>
         </article>
       codenotes:
         - |
@@ -64,6 +65,11 @@
     &_byline {
         color: @black;
         .webfont-regular();
+    }
+
+    &_event-date {
+        .webfont-regular();
+        .u-link-child__hover(@pacific-80);
     }
 }
 
