Adding meta-event to display location, date, and time for events
Fix for missing class dot

Fix for less spacing

Removes whitespace from Gruntfile

Removes extra whitespace from Gruntfile.

Fixes df1462 - adds calendar icon

Fixes df1462 - adds calendar icon styles and HTML test.
- Incorporates Jimmy’s mixin.
- Adds semantic grouping to CSS properties.
- Adds calendar-icon.less to main imports.
- Adds calendar-icon to topdoc_families.

Created events hero macro and updated summary styles

Hero is mocked out with static content. Once events are created in the backend the first event should be passed to the event hero macro and the placeholder content updated

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13579,6 +13579,82 @@ a.focus .summary_event-date {
 */
 /* ==========================================================================
    cfgov-refresh
+   event-meta
+   ========================================================================== */
+/* topdoc
+  name: Event Meta
+  family: cfgov-event-meta
+  notes:
+    - "Markup to display event location, date, and time"
+  patterns:
+    - name: Event Meta
+      markup: |
+        <div class="event-meta h-event">
+          <p class="event-meta_address h-adr">
+            <span class="event-meta_city p-locality">San Francisco</span>
+            <span class="event-meta_state p-region">CA</span>
+            <span class="event-meta_venue p-extended-address">Super Dome</span>
+          </p>
+          <time class="event-meta_datetime dt-start" datetime="2014-01-21 2:30 PM CST">
+            <span class="event-meta_date">1/21/2014</span>
+            <span class="event-meta_time">2:30 PM CST</span>
+          </time>
+        </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          div.event-meta.h-event
+            p.event-meta_address.h-adr
+              span.event-meta_city.p-locality
+              span.event-meta_region.p-region
+              span.event-meta_venue.p-extended-address
+            time.event-meta_datetime.dt-start
+              div.event-meta_date
+              div.event-meta_time
+      notes:
+      - "Using the h-event microformat(http://microformats.org/wiki/h-event) for div.h-event, p.h-adr, and time.dt-start elements"
+  tags:
+    - cfgov-event-meta
+*/
+.event-meta {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0.35714286em;
+  font-size: 0.875em;
+  line-height: 1.57142857;
+  text-transform: capitalize;
+}
+.lt-ie9 .event-meta {
+  font-weight: normal !important;
+}
+.event-meta_address {
+  display: inline-block;
+}
+.event-meta_city:after {
+  content: "\2C";
+}
+.event-meta_date:before {
+  content: "\2014";
+  margin-right: .2em;
+}
+.event-meta_datetime {
+  letter-spacing: normal;
+}
+.event-meta_time:before {
+  content: "\40";
+  margin-right: .2em;
+}
+/* topdoc
+  name: EOF
+  eof: true
+*/
+/* ==========================================================================
+   cfgov-refresh
    cfgov-post
    ========================================================================== */
 /* topdoc
