--- a/static/css/main.less
+++ b/static/css/main.less
@@ -101,6 +101,7 @@
 
 @import (less) "activity.less";
 @import (less) "blog-docs.less";
+@import (less) "event-meta.less";
 @import (less) "post.less";
 @import (less) "calendar-icon.less";
 
