--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,59 +1,57 @@
 {% macro render(hero) %}
 
 {% from "post-macros.html" import category_icon as category_icon %}
-    
+
 {% if hero['related_post'] %}
     {% set related_post = get_document('posts', hero['related_post']) %}
+{% endif %}
+
+{% if related_post %}
+    {% set hero_href = ['href=', related_post.permalink] %}
+{% elif hero.custom_fields.link %}
+    {% set hero_href = ['href=', hero.custom_fields.link[0]] %}
 {% endif %}
 
 <section class="content_hero hero"
          style="background-color: {{ hero.custom_fields.background_color[0]
                                      if hero.custom_fields.background_color }}">
     <div class="hero_wrapper">
-    {% if related_post %}
-        <a class="hero_card" href="{{ related_post.permalink }}">
-    {% elif hero.custom_fields.link %}
-        <a class="hero_card" href="{{ hero.custom_fields.link[0] }}">
-    {% else %}
-        <a class="hero_card">
-    {% endif %}
-            <div class="hero_card-bg">
-                <div class="hero_card-padding">
+        <a class="hero_card" {{ hero_href|join if hero_href }}>
+            <article class="hero_preview">
                 {% if related_post %}
-                    <span class="category-slug">
-                        {{ category_icon(related_post.category.0, 'category-slug_icon') }}
-                        <span class="u-visually-hidden">Category:</span>
-                        {{ related_post.category.0 }}
-                    </span>
+                <span class="category-slug">
+                    {{ category_icon(related_post.category.0, 'category-slug_icon') }}
+                    <span class="u-visually-hidden">Category:</span>
+                    {{- related_post.category.0 -}}
+                </span>
                 {% endif %}
-                    <div class="summary">
-                        <h1 class="summary_header">
-                            {{ hero.title }}
-                        </h1>
-                        <p class="summary_text">
-                        {% if hero.content %}
-                            {{ hero.content|striptags }}
-                        {% elif related_post %}
-                            {% if related_post.dek %}
-                                {{ related_post.dek|striptags }}
-                            {% else %}
-                                {{ related_post.excerpt|striptags }}
-                            {% endif %}
-                        {% endif %}
-                        </p>
-                    {% if related_post %}
-                        {% if related_post.author.0 %}
+                <div class="summary">
+                    <header class="summary_header">
+                        <h1 class="summary_heading">{{ hero.title }}</h1>
+                    </header>
+                    <p class="summary_text">
+                    {%- if hero.content %}
+                        {{- hero.content|striptags -}}
+                    {%- elif related_post %}
+                        {%- if related_post.dek %}
+                            {{- related_post.dek|striptags -}}
+                        {% else %}
+                            {{- related_post.excerpt|striptags -}}
+                        {% endif -%}
+                    {% endif -%}
+                    </p>
+                    <footer class="summary_footer">
+                    {%- if related_post and related_post.author.0 %}
                         <p class="summary_byline">
                             By {{ related_post.author.0 }}
-                            {% if related_post.author.1 %}
+                            {%- if related_post.author.1 %}
                             and {{ related_post.author.1 }}
-                            {% endif %}
+                            {% endif -%}
                         </p>
-                        {% endif %}
-                    {% endif %}
-                    </div>
+                    {% endif -%}
+                    </footer>
                 </div>
-            </div>
+            </article>
         </a>
     </div>
     <div class="hero_img-container hero_img-container__small">
