--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -68,7 +68,129 @@
                     </a>
                 </li>
             </ul>
-        </div> 
+        </div>
+    - name: Hide header modifier
+      markup: |
+        <div class="tags tags__hide-header">
+            <h4 class="tags_header u-visually-hidden">Topics:</h4>
+            <ul class="tags_list">
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Students
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Consumers
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        College loans
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Students
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Consumers
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        College loans
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Students
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Consumers
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        College loans
+                    </a>
+                </li>
+            </ul>
+        </div>
+    - name: Block list modifier 
+      markup: | 
+        <div class="tags tags__block-list">
+            <h4 class="tags_header">Topics:</h4>
+            <ul class="tags_list">
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Students
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Consumers
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        College loans
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Students
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Consumers
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        College loans
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Students
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        Consumers
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
+                        College loans
+                    </a>
+                </li>
+            </ul>
+        </div>  
   tags:
     - cfgov-meta
 */
@@ -155,6 +277,36 @@
         color: @gold-80;
         // 12px is the font size of .tags_link
         font-size: unit(@bullet-font-size / 12px, em);
+    }
+
+    &__block-list {
+        padding-left: 0;
+
+        .tags_tag {
+            display: list-item;
+        }
+
+        .tags_header {
+            .h4();
+            // Bottom margin is eyeballed to 20px from the baseline.
+            margin: 0 0 unit(16px / @font-size, em);
+            color: @black;
+            position: relative;
+        }
+    }
+
+    &__hide-header {
+        padding-left: 0;
+
+        .tags_header{
+            margin: 0;
+        }
+    }
+    
+    &__hide-header&__block-list {
+        .tags_header {
+            margin: 0;
+        }
     }
 }
 
