Fixes DF-1485 - adds modification date pattern
Fixes DF-1485 - adds modification date pattern.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -104,6 +104,7 @@
 @import (less) "event-meta.less";
 @import (less) "post.less";
 @import (less) "calendar-icon.less";
+@import (less) "modification-date.less";
 
 
 /* Template pieces
