Updated event hero to include hero cleanup changes
Added article, header, footer and moved em-dash for event-meta to address:after

--- a/static/css/event-meta.less
+++ b/static/css/event-meta.less
@@ -47,17 +47,17 @@
 
 .event-meta_address{
     display: inline-block;
+
+    // Adding em dash after address
+    &:before{
+      content: "\2014";
+      margin-right: .2em;
+  }
 }
 
 // Adding comma after city
 .event-meta_city:after{
     content: "\2C";
-}
-
-// Adding em dash before date
-.event-meta_date:before{
-    content: "\2014";
-    margin-right: .2em;
 }
 
 .event-meta_datetime{
