--- a/_includes/events-hero.html
+++ b/_includes/events-hero.html
@@ -5,24 +5,29 @@
 <section class="content_hero hero">
     <div class="hero_wrapper">
         <a href="#" class="hero_card hero_card__events">
-            <div class="hero_card-bg">
-                <div class="hero_card-padding">
-                    <span class="category-slug">
-                        {{ category_icon('Announcements & updates', 'category-slug_icon') }}
-                        <span class="u-visually-hidden">Category:</span>
-                        {{ 'Event Category Name' }}
-                    </span>
-                    <div class="summary">
-                        <h1 class="summary_header">
+            <article class="hero_preview">
+                <span class="category-slug">
+                    {{ category_icon('Announcements & updates', 'category-slug_icon') }}
+                    <span class="u-visually-hidden">Category:</span>
+                    {{ 'Event Category Name' }}
+                </span>
+                <div class="summary">
+                    <header class="summary_header">
+                        <h1 class="summary_heading">
                             {{ 'Event Title Here' }}
                         </h1>
-                        <p class="summary_text">
-                            {{ 'Include a short summary to give users a quick overview of the event.' }}
-                        </p>
-                        <span class="summary_event-date">{{ '1/21/2015 @ 2:30 PM CST' }}</span>
-                    </div>
+                    </header>
+                    <p class="summary_text">
+                        {{ 'Include a short summary to give users a quick overview of the event.' }}
+                    </p>
+                    <footer class="summary_footer">
+                        <time class="summary_event-date event-meta_datetime dt-start">
+                            <span class="event-meta_date">{{ '1/21/2014' }}</span>
+                            <span class="event-meta_time">{{ '2:30 PM CST' }}</span>
+                        </time>
+                    </footer>
                 </div>
-            </div>
+            </article>
         </a>
     </div>
     <div class="hero_img-container hero_img-container__small">
