--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12696,6 +12696,9 @@ a.focus .summary_heading {
 .lt-ie9 .summary_footer b {
   font-weight: normal !important;
 }
+.summary_event-date {
+  color: #0072ce;
+}
 a:hover .summary_event-date,
 a.hover .summary_event-date,
 a:focus .summary_event-date,
@@ -13765,12 +13768,12 @@ a.focus .summary_event-date {
 .event-meta_address {
   display: inline-block;
 }
-.event-meta_city:after {
-  content: "\2C";
-}
-.event-meta_date:before {
+.event-meta_address:before {
   content: "\2014";
   margin-right: .2em;
+}
+.event-meta_city:after {
+  content: "\2C";
 }
 .event-meta_datetime {
   letter-spacing: normal;
