Added content to hero for better preview

--- a/_includes/events-hero.html
+++ b/_includes/events-hero.html
@@ -14,11 +14,11 @@
                 <div class="summary">
                     <header class="summary_header">
                         <h1 class="summary_heading">
-                            {{ 'Event Title Here' }}
+                            {{ 'Event Title Here, could possibly break two lines' }}
                         </h1>
                     </header>
                     <p class="summary_text">
-                        {{ 'Include a short summary to give users a quick overview of the event.' }}
+                        {{ 'Include a short summary to give users a quick overview of the event. Should be less than 200 characters in length.' }}
                     </p>
                     <footer class="summary_footer">
                         <time class="summary_event-date event-meta_datetime dt-start">
